--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sass": "^1.60.0",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "~4.8.4",
+    "typescript": "^4.8.4",
     "vite": "^4.1.4",
     "vitest": "^0.29.8",
     "vue-tsc": "^1.2.0"
