Feat: Add PWA service worker

--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --host",
     "build": "run-p type-check build-only",
-    "preview": "vite preview",
     "test:unit": "vitest",
-    "test:unit:dev": "vitest --ui",
-    "coverage": "vitest run --coverage",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "build-only": "vite build",
+    "coverage": "vitest run --coverage",
+    "dev": "vite --host",
+    "format": "prettier --write src/",
+    "preview": "vite preview",
+    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "test:unit:dev": "vitest --ui",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "happy-dom": "^9.1.9",
     "pinia": "^2.0.32",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.1.6",
@@ -37,6 +38,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-istanbul": "^0.29.8",
     "@vitest/ui": "^0.29.8",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.4.0",
