--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.29.8",
     "vue-tsc": "^1.2.0"
   }
